--- a/corte2/Alertas/gradle/libs.versions.toml
+++ b/corte2/Alertas/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.2.1"
 fragment = "1.8.6"
 navigationFragment = "2.8.9"
 material = "1.12.0"
+navigationUiKtx = "2.8.9"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +33,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-fragment = { group = "androidx.fragment", name = "fragment", version.ref = "fragment" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
